# shi

./: .cgcignore  .clang-format  .clangd  .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  CMakeLists.txt  LICENSE  Makefile  README.md  bitarray.c  bitstream.c  build.ps1  compile_commands.json  compress.c  debug_test.c  decompress.c  file_reader.c  file_writer.c  list.c  main.c  node.c  run_tests.ps1  sort.c  test_bitstream.c  tree.c
.omp/: AGENTS.md  config.yml
.opencode/: opencode.json
docs/: Architecture.md  Changelog.md  Plan.md  Roadmap.md
examples/: advanced_usage.c  basic_usage.c
include/: bitarray.h  bitstream.h  compress.h  decompress.h  dictionary.h  file_reader.h  file_writer.h  huffman.h  list.h  metric.h  node.h  sort.h  tree.h
include/cli/: args.h
include/core/: compress.h  decompress.h  version.h
include/data_structures/: bitarray.h  bitstream.h  list.h  node.h  tree.h
include/io/: file_io.h
include/utils/: metric.h  sort.h
scripts/: build.sh  clean.ps1  clean.sh
src/: main.c
src/cli/: args.c
src/core/: compress.c  decompress.c
src/data_structures/: bitarray.c  bitstream.c  list.c  node.c  tree.c
src/io/: file_io.c
src/utils/: metric.c  sort.c
tests/: CTestConfig.cmake  CTestCustom.cmake  run_tests.ps1  run_tests.sh  test.txt  test_args.c  test_bitstream.c  test_compress.c  test_decompress_version.c  test_file_reader.c  test_file_writer.c  test_generate_codes.c  test_helpers.c  test_helpers.h  test_integration.c  test_list.c  test_reconstruct_tree.c  test_tree.c  test_utils.c
tests/fixtures/: test.txt
